cleaned up code and added more events

--- a/src/com/alientation/gui/todo
+++ b/src/com/alientation/gui/todo
@@ -10,7 +10,7 @@
 
 (-) Background
     -   Background Image
-(-) RenderableImage
+(/) RenderableImage
 (-) Frame
     -   Rounded edges
     -   thickness, color, transparency
