--- a/src/com/alientation/gui/todo
+++ b/src/com/alientation/gui/todo
@@ -22,6 +22,10 @@
     /   Thread sleep must also do the same
 
 
+(-) FIX BUGS
+    -   Renderables are not rendering, tends to be the first ones
+        Or they are being covered up by the JFrames rendering
+    -   StackElements are being rendered/updated too much, like WAY too much
 (-) Fix JFrame/Window flickering when resizing/moving the window up
     x   Think it is caused by JFrame rendering without the window container rendering
     -   Actually think it is caused by the renderable, only happens when resizing the window to where
