--- a/src/com/alientation/gui/todo
+++ b/src/com/alientation/gui/todo
@@ -25,6 +25,8 @@
 (-) FIX BUGS
     -   Renderables are not rendering, tends to be the first ones
         Or they are being covered up by the JFrames rendering
+    -   Some renderables are being created without validating their values??
+        RadiusWidth and RadiusHeight are having some problems with being null, same with id
     /   StackElements are being rendered/updated too much, like WAY too much
     -   Dimension resizing does not actually rely on dimensions calling resize on their renderable
         Might be because of improper/nonexistent method of registering sub-renderables to dimensions
